force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Feedback_Source__c.field-meta.xml
<CustomField>
    <fullName>FEC_Feedback_Source__c</fullName>
    <description>Nguồn phản ánh</description>
    <label>Feedback Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MWG</fullName>
            </value>
            <value>
                <fullName>Galaxy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>