force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_FEOL_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_FEOL_ID__c</fullName>
    <description>Mã định danh FEOL</description>
    <label>FEOL ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>