force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_FEOL_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_FEOL_Phone__c</fullName>
    <description>Số điện thoại FEOL</description>
    <label>FEOL Phone</label>
    <type>Phone</type>
</CustomField>