force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_FEOL_User__c.field-meta.xml
<CustomField>
    <fullName>FEC_FEOL_User__c</fullName>
    <description>User FEOL 2.0</description>
    <label>FEOL 2.0 User</label>
    <length>255</length>
    <type>Text</type>
</CustomField>