force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Fraud_Detection__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fraud_Detection__c</fullName>
    <description>Kênh phát hiện gian lận</description>
    <label>Fraud Detection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sao kê</fullName>
            </value>
            <value>
                <fullName>Thu hồi nợ</fullName>
            </value>
            <value>
                <fullName>Tin nhắn</fullName>
            </value>
            <value>
                <fullName>Khác</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>