force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Fraud_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fraud_Type__c</fullName>
    <description>Loại gian lận</description>
    <label>Fraud Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fake Card Application</fullName>
            </value>
            <value>
                <fullName>Disbursement Not Received</fullName>
            </value>
            <value>
                <fullName>Partial Disbursement Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>