force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Fund_Receipt_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Fund_Receipt_Time__c</fullName>
    <description>Thời gian nhận tiền</description>
    <label>Fund Receipt Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>