force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Has_Customer_Reissued_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Has_Customer_Reissued_ID__c</fullName>
    <description>KH đã cấp lại giấy tờ tùy thân hay chưa</description>
    <label>Has Customer Reissued ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>