force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Incident_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incident_Date__c</fullName>
    <description>Ngày xảy ra sự việc</description>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>