force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Incident_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incident_Time__c</fullName>
    <description>Thời điểm xảy ra sự việc</description>
    <label>Incident Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>