force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Incorrect_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incorrect_Account_Number__c</fullName>
    <description>Số TK sai</description>
    <label>Incorrect Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>