force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Incorrect_Customer_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incorrect_Customer_Full_Name__c</fullName>
    <label>Incorrect Customer Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>