force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Incorrect_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>FEC_Incorrect_Date_of_Birth__c</fullName>
    <description>Ngày sinh sai</description>
    <label>Incorrect Date of Birth</label>
    <type>Date</type>
</CustomField>