force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Installment_Amount__c</fullName>
    <description>Số tiền góp</description>
    <label>Installment Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>