force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Insurance_Request_Type_1__c.field-meta.xml
<CustomField>
    <fullName>FEC_Insurance_Request_Type_1__c</fullName>
    <label>Insurance Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&quot;Check Additional Amount Required</fullName>
            </value>
            <value>
                <fullName>Customer Has Made Payment&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>