force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Insurance_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Insurance_Request_Type__c</fullName>
    <description>Loại yêu cầu bảo hiểm</description>
    <label>Insurance Request Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>