force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Interest_Or_Fee_Type__c.field-meta.xml
<CustomField>
    <fullName>FEC_Interest_Or_Fee_Type__c</fullName>
    <description>Loại lãi hoặc phí liên quan</description>
    <label>Interest Or Fee Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Đã khóa C nhưng vẫn phát sinh lãi/ phí</fullName>
            </value>
            <value>
                <fullName>Lãi/ phí liên quan bảo hiểm</fullName>
            </value>
            <value>
                <fullName>Lãi/ phí liên quan IPP/ GNN</fullName>
            </value>
            <value>
                <fullName>Lãi/ phí phạt</fullName>
            </value>
            <value>
                <fullName>Phí thường niên</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>