force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Invite_Channel__c.field-meta.xml
<CustomField>
    <fullName>FEC_Invite_Channel__c</fullName>
    <description>Kênh mời vay</description>
    <label>Invite Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Nhân viên</fullName>
            </value>
            <value>
                <fullName>Hệ thống tự động</fullName>
            </value>
            <value>
                <fullName>SMS/ Zalo/ Facebook/ Email</fullName>
            </value>
            <value>
                <fullName>Nhân viên &amp; hệ thống tự động</fullName>
            </value>
            <value>
                <fullName>Nhân viên &amp; SMS/ Zalo/ Facebook/ Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>