force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Invited_Phone__c.field-meta.xml
<CustomField>
    <fullName>FEC_Invited_Phone__c</fullName>
    <description>SĐT được mời vay</description>
    <label>Invited Phone</label>
    <type>Phone</type>
</CustomField>