force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_IPP_Plan__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Plan__c</fullName>
    <description>Plan IPP</description>
    <label>IPP Plan</label>
    <length>255</length>
    <type>Text</type>
</CustomField>