force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_IPP_Query__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Query__c</fullName>
    <description>Truy vấn / khoản IPP</description>
    <label>IPP Query</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Khoản 1</fullName>
            </value>
            <value>
                <fullName>Khoản 2/3/4</fullName>
            </value>
            <value>
                <fullName>Không có IPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>