force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_IPP_Query_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_IPP_Query_Reason__c</fullName>
    <description>Lý do truy vấn IPP</description>
    <label>IPP Query Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thắc mắc phí XLGD</fullName>
            </value>
            <value>
                <fullName>Thắc mắc số tiền góp</fullName>
            </value>
            <value>
                <fullName>Thắc mắc số tiền sao kê</fullName>
            </value>
            <value>
                <fullName>Thắc mắc số tiền sao kê tăng do khoản mới</fullName>
            </value>
            <value>
                <fullName>Không biết ngày sao kê</fullName>
            </value>
            <value>
                <fullName>Không biết số tài khoản thanh toán</fullName>
            </value>
            <value>
                <fullName>Muốn tư vấn tất toán</fullName>
            </value>
            <value>
                <fullName>Chưa có cơ hội khảo sát</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>