force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Last_4_Digits__c.field-meta.xml
<CustomField>
    <fullName>FEC_Last_4_Digits__c</fullName>
    <description>Bốn số cuối thẻ KH muốn thay thế PIN</description>
    <label>Last 4 Digits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>