force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Legal_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_Legal_List__c</fullName>
    <description>Danh sách pháp lý</description>
    <label>Legal List</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Có</fullName>
            </value>
            <value>
                <fullName>Không</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>