force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Lend_Phone_Or_Not_Use__c.field-meta.xml
<CustomField>
    <fullName>FEC_Lend_Phone_Or_Not_Use__c</fullName>
    <description>Cho mượn máy hoặc không sử dụng</description>
    <label>Lend Phone Or Not Use</label>
    <length>255</length>
    <type>Text</type>
</CustomField>