force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_List_Values3__c.field-meta.xml
<CustomField>
    <fullName>FEC_List_Values3__c</fullName>
    <description>Auto-created from MDM Property</description>
    <label>List_Values3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>