force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Login_Device_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Login_Device_Name__c</fullName>
    <description>Tên thiết bị dùng để đăng nhập (Samsung/Iphone/...)</description>
    <label>Login Device Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>