force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Lost_Documents__c.field-meta.xml
<CustomField>
    <fullName>FEC_Lost_Documents__c</fullName>
    <description>Giấy tờ bị mất</description>
    <label>Lost Documents</label>
    <length>255</length>
    <type>Text</type>
</CustomField>