force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Merchant_ETA__c.field-meta.xml
<CustomField>
    <fullName>FEC_Merchant_ETA__c</fullName>
    <description>Thời gian dự kiến từ merchant</description>
    <label>Merchant ETA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>