force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Merchant_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_Merchant_Name__c</fullName>
    <description>Tên đơn vị chấp nhận thẻ / merchant</description>
    <label>Merchant Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>