force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Misappropriating_Staff__c.field-meta.xml
<CustomField>
    <fullName>FEC_Misappropriating_Staff__c</fullName>
    <description>Đối tượng chiếm dụng / nhân viên liên quan</description>
    <label>Misappropriating Staff</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NV làm hồ sơ</fullName>
            </value>
            <value>
                <fullName>NV thu hồi nợ</fullName>
            </value>
            <value>
                <fullName>Đối tượng ngoài</fullName>
            </value>
            <value>
                <fullName>Không cung cấp/ không nhớ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>