force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Misappropriation_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Misappropriation_Date__c</fullName>
    <description>Ngày chiếm dụng / sử dụng sai</description>
    <label>Misappropriation Date</label>
    <type>Date</type>
</CustomField>