force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Misused_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Misused_Amount__c</fullName>
    <description>Số tiền sử dụng sai / lạm dụng</description>
    <label>Misused Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>