force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Money_Receive_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_Money_Receive_Method__c</fullName>
    <description>Hình thức nhận tiền</description>
    <label>Money Receive Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chuyển khoản</fullName>
            </value>
            <value>
                <fullName>Điện máy xanh</fullName>
            </value>
            <value>
                <fullName>Thế giới di động</fullName>
            </value>
            <value>
                <fullName>VNPOST</fullName>
            </value>
            <value>
                <fullName>Viettel</fullName>
            </value>
            <value>
                <fullName>Không có</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>