force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_MRC_Address__c.field-meta.xml
<CustomField>
    <fullName>FEC_MRC_Address__c</fullName>
    <description>Địa chỉ nhận MRC</description>
    <label>MRC Address</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Home Address</fullName>
            </value>
            <value>
                <fullName>Office</fullName>
            </value>
            <value>
                <fullName>Dealer Store</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>