force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_MRC_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_MRC_Rejection_Reason__c</fullName>
    <description>Lý do không ghi nhận MRC</description>
    <label>MRC Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Uses Different Phone Number</fullName>
            </value>
            <value>
                <fullName>Phone Number Update Failed</fullName>
            </value>
            <value>
                <fullName>Customer Refused MRC</fullName>
            </value>
            <value>
                <fullName>Customer Prefers Direct Support</fullName>
            </value>
            <value>
                <fullName>Phone Update Request Pending</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>