force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_National_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_National_ID__c</fullName>
    <description>Số định danh cá nhân / CCCD</description>
    <label>National ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>