force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_National_ID_List__c.field-meta.xml
<CustomField>
    <fullName>FEC_National_ID_List__c</fullName>
    <description>Danh sách định danh / CCCD (chọn nhiều)</description>
    <label>National ID List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>