force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_New_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Case_ID__c</fullName>
    <description>Case ID mới</description>
    <label>New Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>