force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_New_Citizen_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Citizen_ID_Number__c</fullName>
    <description>CCCD mới</description>
    <label>New Citizen ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>