force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_New_Content__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Content__c</fullName>
    <description>Nội dung mới</description>
    <label>New Content</label>
    <length>255</length>
    <type>Text</type>
</CustomField>