force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_New_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Issue_Date__c</fullName>
    <description>Ngày cấp mới</description>
    <label>New Issue Date</label>
    <type>Date</type>
</CustomField>