force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_New_Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_New_Place_of_Issue__c</fullName>
    <description>Nơi cấp mới</description>
    <label>New Place of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>