force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_No_Interest_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_No_Interest_Reason__c</fullName>
    <label>No Interest Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Survey Unsuccessful</fullName>
            </value>
            <value>
                <fullName>Unclear Outstanding Balance</fullName>
            </value>
            <value>
                <fullName>High Interest/Fee</fullName>
            </value>
            <value>
                <fullName>Too Many Loan Offers</fullName>
            </value>
            <value>
                <fullName>Excessive Debt Reminders</fullName>
            </value>
            <value>
                <fullName>Relatives Contacted for Debt Reminder</fullName>
            </value>
            <value>
                <fullName>Debt Collection Staff Attitude</fullName>
            </value>
            <value>
                <fullName>Unattractive Promotions</fullName>
            </value>
            <value>
                <fullName>Low Credit Limit</fullName>
            </value>
            <value>
                <fullName>Using Another Lender</fullName>
            </value>
            <value>
                <fullName>Remote Area</fullName>
            </value>
            <value>
                <fullName>Card Not Received</fullName>
            </value>
            <value>
                <fullName>Not Interested After Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>