force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Old_Case_ID__c.field-meta.xml
<CustomField>
    <fullName>FEC_Old_Case_ID__c</fullName>
    <description>Case ID cũ</description>
    <label>Old Case ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>