force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Old_Citizen_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Old_Citizen_ID_Number__c</fullName>
    <description>CCCD cũ</description>
    <label>Old Citizen ID Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>