force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Old_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>FEC_Old_Issue_Date__c</fullName>
    <description>Ngày cấp cũ</description>
    <label>Old Issue Date</label>
    <type>Date</type>
</CustomField>