force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Old_Limit__c.field-meta.xml
<CustomField>
    <fullName>FEC_Old_Limit__c</fullName>
    <description>Hạn mức cũ</description>
    <label>Old Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>