force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Old_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>FEC_Old_Phone_Number__c</fullName>
    <description>Số điện thoại cũ</description>
    <label>Old Phone Number</label>
    <type>Phone</type>
</CustomField>