force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Old_Place_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>FEC_Old_Place_of_Issue__c</fullName>
    <description>Nơi cấp cũ</description>
    <label>Old Place of Issue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>