force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_OS_Name__c.field-meta.xml
<CustomField>
    <fullName>FEC_OS_Name__c</fullName>
    <description>Tên hệ điều hành</description>
    <label>OS Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>