force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_OS_Version__c.field-meta.xml
<CustomField>
    <fullName>FEC_OS_Version__c</fullName>
    <description>Phiên bản hệ điều hành</description>
    <label>OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>