force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Other_Loans__c.field-meta.xml
<CustomField>
    <fullName>FEC_Other_Loans__c</fullName>
    <description>Khoản vay khác liên quan</description>
    <label>Other Loans</label>
    <length>255</length>
    <type>Text</type>
</CustomField>