force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Other_Reason__c</fullName>
    <description>Lý do khác</description>
    <label>Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>