force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_OTP_Or_Card_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_OTP_Or_Card_Reason__c</fullName>
    <description>Lý do chia sẻ OTP / thẻ</description>
    <label>OTP Or Card Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gia hạn thẻ</fullName>
            </value>
            <value>
                <fullName>NV hỗ trợ kiểm tra tài khoản/ số dư</fullName>
            </value>
            <value>
                <fullName>NV tư vấn chuyển đổi trả góp</fullName>
            </value>
            <value>
                <fullName>NV tư vấn đáo hạn</fullName>
            </value>
            <value>
                <fullName>NV tư vấn để không bị gọi nhắc nợ</fullName>
            </value>
            <value>
                <fullName>NV tư vấn gọi hỗ trợ hủy thẻ</fullName>
            </value>
            <value>
                <fullName>NV tư vấn hủy bảo hiểm</fullName>
            </value>
            <value>
                <fullName>NV tư vấn nhận thẻ cào/ khuyến mãi/ trúng thưởng</fullName>
            </value>
            <value>
                <fullName>NV tư vấn phí thường niên</fullName>
            </value>
            <value>
                <fullName>NV tư vấn rút tiền mặt</fullName>
            </value>
            <value>
                <fullName>NV tư vấn thu hồi thẻ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>