force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Outstanding_Amount__c.field-meta.xml
<CustomField>
    <fullName>FEC_Outstanding_Amount__c</fullName>
    <description>Dư nợ thẻ</description>
    <label>Outstanding Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>