force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Parcel_Code__c.field-meta.xml
<CustomField>
    <fullName>FEC_Parcel_Code__c</fullName>
    <description>Mã bưu kiện / vận đơn</description>
    <label>Parcel Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>