force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Method__c</fullName>
    <label>Payment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bank Transfer</fullName>
            </value>
            <value>
                <fullName>Other Channels</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>