force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Payment_Reason__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Reason__c</fullName>
    <description>Lý do thanh toán / nộp phí</description>
    <label>Payment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NV yêu cầu</fullName>
            </value>
            <value>
                <fullName>KH tự nguyện</fullName>
            </value>
            <value>
                <fullName>Không cung cấp/ không nhớ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>