force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Payment_Time__c.field-meta.xml
<CustomField>
    <fullName>FEC_Payment_Time__c</fullName>
    <description>Thời điểm thanh toán</description>
    <label>Payment Time</label>
    <type>DateTime</type>
</CustomField>