force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Persuasion_Status__c.field-meta.xml
<CustomField>
    <fullName>FEC_Persuasion_Status__c</fullName>
    <description>Kết quả thuyết phục / làm việc với khách hàng</description>
    <label>Persuasion Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thành công</fullName>
            </value>
            <value>
                <fullName>Không thành công</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>