force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Phone_Match__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Match__c</fullName>
    <description>Khớp số điện thoại</description>
    <label>Phone Match</label>
    <length>255</length>
    <type>Text</type>
</CustomField>