force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_Phone_Number_Classification__c.field-meta.xml
<CustomField>
    <fullName>FEC_Phone_Number_Classification__c</fullName>
    <description>Phân loại số điện thoại liên quan</description>
    <label>Phone Number Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mua lại sim</fullName>
            </value>
            <value>
                <fullName>SĐT tham chiếu nhưng không còn liên hệ</fullName>
            </value>
            <value>
                <fullName>Không quen biết chủ HĐ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>