force-app/main/default/objects/FEC_Additional_Info__c/fields/FEC_POS_Complaint_Issue_3__c.field-meta.xml
<CustomField>
    <fullName>FEC_POS_Complaint_Issue_3__c</fullName>
    <description>Vấn đề khiếu nại POS (3)</description>
    <label>POS Complaint Issue 3</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Các loại phí, lãi phát sinh</fullName>
            </value>
            <value>
                <fullName>Chương trình khuyến mãi</fullName>
            </value>
            <value>
                <fullName>Dư nợ thẻ</fullName>
            </value>
            <value>
                <fullName>Hình thức thanh toán</fullName>
            </value>
            <value>
                <fullName>Kết quả xử lý yêu cầu/ khiếu nại</fullName>
            </value>
            <value>
                <fullName>Số tiền kỳ góp</fullName>
            </value>
            <value>
                <fullName>Số tiền sao kê</fullName>
            </value>
            <value>
                <fullName>Số tiền tất toán</fullName>
            </value>
            <value>
                <fullName>Thời hạn thanh toán</fullName>
            </value>
            <value>
                <fullName>Thông tin về TMN</fullName>
            </value>
            <value>
                <fullName>Thủ tục giấy tờ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>